app/frontend/frontend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cldinf-web
  namespace: cldinf-app
#  annotations:
#    external-dns.alpha.kubernetes.io/hostname: cldinf-k8s-g5.network.garden
spec:
  ingressClassName: nginx-public
  tls:
  - hosts:
    - cldinf-k8s-g5.network.garden
    secretName: cldinf-web-tls
  rules:
  - host: cldinf-k8s-g5.network.garden
    http:
      paths:
      - path: /mnt/data
        pathType: Prefix
        backend:
          service:
            name: cldinf-web
            port:
              number: 80
